Avoid vertical double-scrollbar
Fixes: https://github.com/oVirt/ovirt-web-ui/issues/166

--- a/src/components/VmsList/style.css
+++ b/src/components/VmsList/style.css
@@ -55,3 +55,7 @@
 .selectedVm {
     z-index: 20;
 }
+
+.max-window-height {
+    height: calc(100vh - 100px);
+}
